[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PlayerScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 64.0
theme = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AiScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 14.0
grow_horizontal = 0
theme = SubResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -33.0594
margin_right = 80.0
margin_bottom = 30.9406
theme = SubResource( 6 )
text = "PONG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_left = 0.501
anchor_top = 0.678
anchor_right = 0.501
anchor_bottom = 0.678
margin_left = -93.7986
margin_top = -35.2173
margin_right = 94.2014
margin_bottom = 34.7827
theme = SubResource( 8 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
